juliabloggers.com by @randyzwitch

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 # -*- coding: utf-8 -*-
+##############################################################################
 #Author: @SVAKSHA, Tuesday 21 January 2014 14:00:20 PM IST 
+##############################################################################
+
 
 #DVCS
 #=====
 *.hg/
 .hgignore
+queue.md
 
 #Databases/DB Ignore
 #==================
