Fontconfig.jl by dcjones

--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,64 @@
 #Author: @SVAKSHA, Tuesday 21 January 2014 14:00:20 PM IST 
 ##############################################################################
 
-
-#DVCS
-#=====
-*.hg/
-.hgignore
+#====================================================
+# GENERAL
+#====================================================
+tags
+MANIFEST
 az.md
 
-#Databases/DB Ignore
-#==================
+
+#====================================================
+# USE GLOB SYNTAX
+#====================================================
+syntax: glob
+*.elc
+
+
+#====================================================
+# IPYTHON Notebooks
+#====================================================
+notebooks/.ipynb_checkpoints/*
+
+
+#====================================================
+# PYTHON PACKAGES
+#====================================================
+__pycache__
+*.egg
+*.egg-info
+*.pyc
+*.pyo
+*.swp
+*.py[cod]
+*~
+.installed.cfg
+bin
+build
+develop-eggs
+dist
+eggs
+include
+lib
+lib64
+parts
+sdist
+var
+
+
+#====================================================
+# DVCS
+#====================================================
+*.git
+*.hg
+.hgignore
+
+
+
+#====================================================
+# DATABASE
+#====================================================
 *.sql
 *.sqlite
 ehthumbs.db
@@ -19,15 +68,50 @@ Thumbs.db
 config/databases.yml
 cache
 
-# LOGS
-#=====
-log
-*.log
+# DATA folders
+#----------------------------------------------------
+**/datum
+datum/
+datum/**
+
+
+#====================================================
+# C extensions
+#====================================================
+*.so
+
+#====================================================
+# INSTALLER ERROR LOGS
+#====================================================
+pip-log.txt
 *error_log.txt
+*.log
+log/
 
 
-# OS generated junk files
-#=================
+#====================================================
+# UNIT TEST / COVERAGE REPORTS
+#====================================================
+.coverage
+.tox
+nosetests.xml
+
+#====================================================
+# i18 / i10 TRANSLATIONS
+#====================================================
+*.mo
+
+
+#====================================================
+# Mr Developer
+#====================================================
+.mr.developer.cfg
+.project
+.pydevproject
+
+#====================================================
+# OS JUNK FILES
+#====================================================
 .DS_Store
 .DS_Store?
 ._*
@@ -38,7 +122,9 @@ ehthumbs.db
 Thumbs.db
 
 
-# Translations
-#==================
-*.mo
+#====================================================
+# EDITOR: Vi
+#====================================================
+*.swp
+
 
