@tgvaughan : TimeTrees.jl

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 #====================================================
 # GENERAL
 #====================================================
-99.md
+PRIVATE/
 
 #====================================================
 # DVCS
