--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # GENERAL
 #====================================================
 PRIVATE/
+.directory
 
 #====================================================
 # DVCS
