piever/TableWidgets.jl

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ PRIVATE/
 *.swp
 
 
+#====================================================
+# Julia build config : ver-0.6.4 onwards
+#====================================================
+*.buildconfig
+
