--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,8 +2,8 @@
 
 github: [svaksha]
 patreon: svaksha
-open_collective: # Replace with a single Open Collective username
-ko_fi: # Replace with a single Ko-fi username
+open_collective: https://opencollective.com/svaksha
+ko_fi: https://www.ko-fi.com/svaksha
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
 liberapay: svaksha
